--- a/style.css
+++ b/style.css
@@ -1,108 +1,126 @@
+/* .p1{
+    color: #ff0000;
+}
+.p2{
+    color: #0000ff;
+}
+.main .div2 p span{
+    color: #ff0000;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+} */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: weight;
-    font-style: normal;
-  
+ }
+ body{
+    font-family: "poppins",sans-serif;
+ }
+nav{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #1e1e2f;
+    padding: 10px 40px;
+    box-shadow: 0px 2px 5px rgba(o,0,0.1);
+    position:sticky;
+    top: 0;
+    z-index:1000 ;
 }
-body{
+nav div img{
+    height: 50px;
+    width: auto;
+}
+nav ul{
+    list-style-type: none;
+    display: flex;
+   gap: 30px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-weight:500;
+    padding: 8px 12px;
+    border-radius: 5px;
+    transition:0.5s ease;
+}
+nav u li a:hover{
+    background-color: #eae205;
+    color:rgba(o,0,0.1); 
 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
 }
-.img{
+/* header/banner css */
+.banner{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+.banner div{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner div img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-
+    display: block;
 }
-.img1{
-    width: auto;
-    height: 100px;
-}
-.navbar{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgb(26, 23, 26);
-    padding: 10px 50px;
-    height: 10vh;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-.nav{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    gap: 15px;
-}
-.nav li a{
-    text-decoration: none;
-    font-weight: 500px;
-    padding: 10px 20px;
-    color: white;
-    transition: background-color 0.3s ease;
-    
-}
-.nav li a:hover{
-
-    color: rgb(255, 242, 0);
-    
-}
-.main{
+.banner div div{
+ position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
     display: flex;
     flex-direction: column;
+}
+.banner div div h1{
+    font-size: 4rem;
+    margin-bottom: 10px;
+}
+.banner p{
+    font-size: 1.5rem;
+}
+section{
+    background-color: white;
+    padding: 40px;
+    text-align: center;
+}
+section h1{
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    color: #1e1e2f;
+}
+.productgrid{
     align-items: center;
-    justify-content: left;
-    padding: 70px;
-    height: 90vh;
-    background-image: url(/Images/annpurna.jpg);
-    background-position: center;
-    background-size: cover;
-    color: white;
-    
+    justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    /* gap: 30px; */
 }
-.searchicon {
-    height: 20px;
-    filter: invert(38);
-
-}
-.searchicon:hover{
-    filter: invert(84%) sepia(88%) saturate(3145%) hue-rotate(1deg) brightness(102%) contrast(101%);
-} 
-.container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    height: 60vh;
-    width: 100vw;
-}
-.rightcontainer{
-    width: 50vw;
-    border: 1px solid red;
-    height: 60vh;
-    display: flex;
+.productcard{
+    background-color: #f5f5f5;
+    border-radius: 10px;
     padding: 20px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+    overflow: hidden;
+    width: 22vw;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
+    transition: 0.3s ease;
+}
+.productcard img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 
 }
-.leftcontainer{
-    width: 50vw;
-    border: 1px solid red;
-    height: 60vh;
+.productcard:hover{
+    transform: scale(1.05);
 }
