--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ nav{
     z-index:1000 ;
     
 }
-nav div img{
-    border-radius: 50%;
+.logo img {
+    width: 50px;
     height: 50px;
-    width: auto;
 }
+
 nav ul{
     list-style-type: none;
     display: flex;
