--- a/style.css
+++ b/style.css
@@ -21,33 +21,36 @@
     font-family: "poppins",sans-serif;
  }
 nav{
+    padding: 2px 25px;
     display:flex;
     align-items: center;
     justify-content: space-between;
-     background-color: #cc8b86;
-;
+     background-color: #cc8b86;;
     /* padding: 10px 40px; */
     box-shadow: 0px 2px 5px rgba(o,0,0.1);
     position:sticky;
     top: 0;
     z-index:1000 ;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
+    background: linear-gradient(to right, #cc8b86, #D1BE9C);
     
 }
 .logo img {
-    width: 50px;
+    padding-left: 12px;
+    width: 60px;
     height: 50px;
 }
 
 nav ul{
     list-style-type: none;
     display: flex;
-   gap: 30px;
+   gap: 50px;
 }
 nav ul li a{
     text-decoration: none;
     color: #fff;
     font-weight:500;
-    padding: 8px 12px;
+    /* padding: 8px 12px; */
     border-radius: 5px;
     transition:0.5s ease;
 }
@@ -129,4 +132,47 @@ section h1{
 }
 .productcard:hover{
     transform: scale(1.05);
+    box-shadow: 0px 0px 58px 8px rgba(0,0,0,0.56);
+}
+.tour{
+ font-size: 1.5rem;
+    color: black;
+    text-align: center;
+    text-decoration: underline;
+}
+.videoArea{
+box-shadow: 0px 0px 58px 8px rgba(0,0,0,0.56);
+    width:45vw;
+    margin: auto;
+     height:50vh;
+}
+.video{
+    width: 100%;
+    height: 100%;
+}
+.product{
+     font-size: 2rem;
+}
+footer{
+    background-color: #cc8b86;
+    padding: 20px;
+    text-align: center;
+    color: #786767;
+}
+.foot{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.foot1{
+ 
+}
+.foot2{
+
+}
+li{
+    list-style: none;
+}
+.foot1 img{
+    width: 48px;
 }
