--- a/table.css
+++ b/table.css
@@ -34,9 +34,9 @@ th{
     font-weight: 600;
     font-size: 1.2em;
 }
-tr:nth-child(even) {
+/* tr:nth-child(even) {
     background-color: #eebebe;
-}
+} */
 tr:hover {
     background-color: #d1f2e8;
 }
@@ -67,4 +67,15 @@ button:first-child{
 button:last-child{
 
     background-color: #0a9f7a;
+}
+.profile-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.948);
+    border: 1px solid #098772;
+}
+tr td:first-child{
+    font-weight: 600;
 }
